# FPGAMAG18

./: .bashrc  .gitignore  CMakeLists.txt  FPGAMAG18.code-workspace  Makefile  README.md  filelist.f  requirements.txt  run.py  sc_main.cpp  tb.hpp  tb_top.sv  tree.py
env/: ArtyA7.v  tb.sv  vcdplus.v
fmrv32im-artya7.nonos/: fmrv32im-artya7.xpr
modules/fmrv32im_v1/src/: fmrv32im.v  fmrv32im_div.v
src/: fmrv32im_core.sv  tb_axi_slave_model.v  tb_fmrv32im_core.sv  tb_fmrv32im_core.v  vcdplus.v
src/cache_v1/src/: fmrv32im_cache.sv  fmrv32im_cache.v
src/fmrv32im_v1/src/: fmrv32im_alu.v  fmrv32im_csr.v  fmrv32im_decode.v  fmrv32im_div.sv  fmrv32im_mul.v
src/plic_v1/src/: fmrv32im_plic.v
src/timer_v1/src/: fmrv32im_timer.v
